--- a/index.html
+++ b/index.html
@@ -29,7 +29,26 @@
               <ul>
                 <li class="cartIcon">
                   <img src="./images/add-to-cart-3046.svg" alt="cart">
-                  <p>00</p>
+                  <div class="cartCounter">
+                    <p>00</p>
+                  </div>
+                  <div class="cartDescription">
+                    <p style="font-weight: 700; padding-left: 20px;">Cart</p>
+                    <div class="sepHR"></div>
+                    <div class="itemsCart">
+                      <div class="checkoutThumbnail">
+                        <img src="./images/image-product-1-thumbnail.jpg" alt="cart thumbnail">
+                      </div>
+                      <ul>
+                        <li>Fall Limited Edition Sneakers</li>
+                        <li>$125.00 x 3 <strong>$375.00</strong></li>
+                      </ul>
+                      <div class="deleteIcon">
+                        <img src="./images/icon-delete.svg" alt="delete">
+                      </div>
+                    </div>
+                    <button>Checkout</button>
+                  </div>
                 </li>
                 <li class="avatar">
                   <img src="./images/image-avatar.png" alt="avatar image">
