--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
   <header>
     <nav>
       <div class="navigation">
-        <div class="hamburger">
-          <div class="bar"></div>
-          <div class="bar"></div>
-          <div class="bar"></div>
-        </div> 
         <div class="navPrimary">
+          <div class="hamburger">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+          </div> 
           <div class="webLogo">
             <img src="./images/logo.svg" alt="logo">
           </div>
           <div class="navMenu">
             <ul>
-              <li>Collections</li>
-              <li>Men</li>
-              <li>Women</li>
-              <li>About</li>
-              <li>Contact</li>
+              <li><a href="#">Collections</a></li>
+              <li><a href="#">Men</a></li>
+              <li><a href="#">Women</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Contact</a></li>
             </ul>
           </div>
           <div class="cartAvatar">
@@ -105,13 +105,15 @@
         <p class="description">These low-profile sneakers are your perfect casual wear companion. Featuring a 
           durable rubber outer sole, they’ll withstand everything the weather can offer.</p>
       </div>
-      <div class="priceDiscount">
-        <h3>$125.00</h3>
-        <h4 class="discount">
-          50%
-        </h4>
+      <div class="amount">
+        <div class="priceDiscount">
+          <h3>$125.00</h3>
+          <h4 class="discount">
+            50%
+          </h4>
+        </div>
+        <h4 class="oldPrice">$250.00</h4>
       </div>
-      <h4 class="oldPrice">$250.00</h4>
       <div class="cartAddition">
         <div class="productCounter">
           <img src="./images/icon-minus.svg" alt="icon-minus">
