fixed the hamburger.active and navMenu.active JS script, PROBLEM: navMenu lists not displaying

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <div class="navigation">
         <div class="navPrimary">
           <div class="hamburger">
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
           </div> 
           <div class="webLogo">
             <img src="./images/logo.svg" alt="logo">
